--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -38,5 +38,5 @@ const description =
     </section>
 
     <!-- All Blog Links -->
-    <BlogLinks />
+    <BlogLinks showTitle={false} />
 </BaseLayout>
