--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -38,5 +38,5 @@ const description =
     </section>
 
     <!-- All Projects -->
-    <Projects />
+    <Projects showTitle={false} />
 </BaseLayout>
