--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -97,6 +97,26 @@ import siteData from "../../data/site.json";
                     </svg>
                 </a>
                 <a href="#contact" class="btn btn-outline">Contact</a>
+                <a
+                    href="/cv.pdf"
+                    download="Houdaifa_Boucenna_CV.pdf"
+                    class="btn btn-outline group"
+                >
+                    Download CV
+                    <svg
+                        class="w-4 h-4 ml-2 group-hover:translate-y-1 transition-transform"
+                        fill="none"
+                        stroke="currentColor"
+                        viewBox="0 0 24 24"
+                    >
+                        <path
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            stroke-width="2"
+                            d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"
+                        ></path>
+                    </svg>
+                </a>
                 <div class="flex gap-2">
                     <a
                         href={siteData.github}
