--- a/src/components/sections/Skills.astro
+++ b/src/components/sections/Skills.astro
@@ -66,7 +66,7 @@ const skillGroups = [
         >
         </div>
         <div
-            class="absolute bottom-20 right-10 w-40 h-40 bg-violet-200 rounded-full blur-3xl"
+            class="absolute bottom-20 right-10 w-40 h-40 bg-secondary-200 rounded-full blur-3xl"
         >
         </div>
     </div>
