--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -18,7 +18,7 @@ const description =
         <div class="floating-orb w-64 h-64 bg-primary-400 -top-10 -left-10">
         </div>
         <div
-            class="floating-orb w-48 h-48 bg-violet-400 bottom-0 right-10"
+            class="floating-orb w-48 h-48 bg-secondary-400 bottom-0 right-10"
             style="animation-delay: -3s;"
         >
         </div>
