--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -15,7 +15,7 @@ const description =
         class="relative py-20 md:py-28 gradient-bg-animated overflow-hidden"
     >
         <!-- Decorative orbs -->
-        <div class="floating-orb w-56 h-56 bg-violet-400 -top-10 right-10">
+        <div class="floating-orb w-56 h-56 bg-secondary-400 -top-10 right-10">
         </div>
         <div
             class="floating-orb w-40 h-40 bg-primary-400 bottom-0 left-20"
